[gd_scene load_steps=6 format=3 uid="uid://df43ms8oxtrs0"]

[ext_resource type="Script" path="res://Source/Game/Player/Player.gd" id="1_ao6qk"]
[ext_resource type="FontFile" uid="uid://d0aw4bklyegh8" path="res://Ressources/Font/FSEX300.ttf" id="2_s2dwd"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_csh4g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pv6x0"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_myytl"]
properties/0/path = NodePath(".:id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("NameLabel:text")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 128, 0)
script = ExtResource("1_ao6qk")

[node name="MeshList" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshList"]
mesh = SubResource("CapsuleMesh_csh4g")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_pv6x0")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)

[node name="Camera3d" type="Camera3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)
far = 16384.0

[node name="RayCast3D" type="RayCast3D" parent="Neck"]
target_position = Vector3(0, 0, 8)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 256, 0)
light_color = Color(0.949143, 0.817285, 0.727779, 1)
light_energy = 16.0
light_size = 256.0
shadow_enabled = true
omni_range = 1024.0

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
billboard = 1
text = "NAME"
font = ExtResource("2_s2dwd")
font_size = 64

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_myytl")
